--- a/src/pages/academics/admission.astro
+++ b/src/pages/academics/admission.astro
@@ -6,7 +6,7 @@ import PageLayout from "@/layouts/page-layout.astro";
 ---
 
 <PageLayout
-  title="Faculty of Department of Electronics and Communication Engineering | GEC PKD"
+  title="Admission"
 >
 
 </PageLayout>
