--- a/src/sections/header.astro
+++ b/src/sections/header.astro
@@ -30,7 +30,7 @@ const navItems = [
     sub: [
       { name: "Projects", href: "/projects" },
       { name: "Research", href: "/research/publications" },
-      { name: "Achivements", href: "/alumini" },
+      { name: "Alumini", href: "/alumini" },
     ],
   },
   {
