--- a/src/pages/people/technical-staff.astro
+++ b/src/pages/people/technical-staff.astro
@@ -1,12 +1,38 @@
 ---
+import Layout from "@/layouts/root-layout.astro";
+import Section from "@/sections/section.astro";
 
 import "@/styles/global.css";
-import PageLayout from "@/layouts/page-layout.astro";
 
+import { staff } from "@/data/faculty";
+import FacultyCard from "@/components/faculty-card.astro";
+import PageLayout from "@/layouts/page-layout.astro";
+import { cn } from "@/lib/utils";
+
+const normalAlignment = "col-start-2 col-end-[14]";
 ---
 
 <PageLayout
-  title="Faculty of Department of Electronics and Communication Engineering | GEC PKD"
+  title="Technical Staff of Department of Electronics and Communication Engineering | GEC PKD"
 >
-
+  <Section
+    title="Technical Staff"
+    wrapperClass={cn(normalAlignment, "pb-[100px] space-y-8")}
+    titleClass="before:content-none"
+  >
+    <div
+      class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6"
+    >
+      {
+        staff.map((staff) => (
+          <FacultyCard
+            name={staff.name}
+            designation={staff.designation}
+            image={staff.image}
+            email={staff.email}
+          />
+        ))
+      }
+    </div>
+  </Section>
 </PageLayout>
