--- a/src/pages/events/event.astro
+++ b/src/pages/events/event.astro
@@ -8,38 +8,32 @@ const eventItems = [
   {
     id: 1,
     displayDate: "2024-02-28",
-    title: "Aparna V Shenoy of S3 ECE was selected for Interzone Volleyball Team",
+    title: "Talk Session with Muhshin C A",
     description: "Congratulations to Aparna V Shenoy for her outstanding achievement in being selected for the Interzone Volleyball Team.",
-    image: "https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-1.jpg",
+    image: "../src/assets/events/muhshin C A Talk session.jpg",
   },
   {
     id: 2,
     displayDate: "2024-02-18",
-    title: "Congratulations to the S6 Toppers",
+    title: "Campus to Corporate Transition",
     description: "We proudly announce our S6 toppers who have demonstrated exceptional academic performance.",
-    image: "https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-2.jpg",
+    image: "../src/assets/events/campus to coperate.jpg",
   },
   {
     id: 3,
     displayDate: "2024-02-08",
-    title: "Ideas Competition Winners",
+    title: "Call for Volunteers",
     description: "Celebrating the innovative spirit of our students in the annual Ideas Competition.",
-    image: "https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-3.jpg",
+    image: "../src/assets/events/call for volunteers.jpg",
   },
   {
     id: 4,
     displayDate: "2024-01-25",
-    title: "New Research Lab Inaugurated",
+    title: "Circuit to Career Workshop",
     description: "State-of-the-art electronics research facility now available for students and faculty.",
-    image: "https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-4.jpg",
+    image: "../src/assets/events/ckt to career.jpg",
   },
-  {
-    id: 5,
-    displayDate: "2024-01-15",
-    title: "Faculty Development Program",
-    description: "Our department hosted a week-long development program for electronics professors.",
-    image: "https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-5.jpg",
-  }
+  
 ];
 
 // Format the project items in the format expected by the EventCarousel component
